# GDUtils-Geode

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  build-ios.sh  build.bat  build_android64.bat  changelog.md  mod.json  support.md
.github/workflows/: build.yml
include/: RateEvent.hpp  Types.hpp
libs/curl/: libcurl_a.lib
patch/: ssl_options.cpp  ssl_options.h
src/: BadApple.cpp  BadApple.h  BrownAlertDelegate.cpp  BrownAlertDelegate.hpp  CreditsBetaMenu.cpp  CreditsBetaMenu.h  CreditsMenu.cpp  CreditsMenu.h  CustomSettings.cpp  CustomSettings.hpp  DailyChest.cpp  Discord.cpp  Discord.h  DownloadManager.cpp  DownloadManager.h  EventsPush.cpp  EventsPush.h  InfoNewLayer.cpp  MoreLeaderboards.cpp  MoreLeaderboards.h  MoreLeaderboardsCell.cpp  MoreLeaderboardsCell.h  MoreLeaderboardsListView.cpp  MoreLeaderboardsListView.h  NewProfilePage.cpp  NewProfilePage.h  OldBorder.cpp  OldBorder.hpp  ProcessLambdas.cpp  ProcessLambdas.h  VideoPlayer.cpp  VideoPlayer.hpp  includes.h  main.cpp
src/MoreLeaderboards/: CustomScoreCell.cpp  LevelHelper.cpp  MoreLeaderboards.cpp  MoreLeaderboards.h  MoreLeaderboardsCell.cpp  MoreLeaderboardsCell.h  MoreLeaderboardsListView.cpp  MoreLeaderboardsListView.h  Newtab.cpp  Newtab.h  SelectRegion.cpp  SelectRegion.h  SelectRegionCell.cpp  SelectRegionCell.h
src/Notifications/: DailyChest.cpp  DailyChest.h  EventsPush.cpp  EventsPush.h
src/Secret/: BadApple.cpp  BadApple.h  COTE.cpp  COTE.h  VideoPlayer.cpp  VideoPlayer.hpp
src/Settings/: CreditsBetaMenu.cpp  CreditsBetaMenu.h  CreditsMenu.cpp  CreditsMenu.h  CustomSettings.cpp  CustomSettings.hpp  TestButton.cpp
src/Styles/: EventLevelInformation.cpp  EventLevelInformation.h  GauntletStyle.cpp  IconLockColors.cpp  NewGJCommentList.cpp  NewGJCommentList.h  NewProfilePage.cpp  NewProfilePage.h  TheVault.cpp
src/Utils/: DemonList.cpp  DownloadManager.cpp  DownloadManager.h  FriendsProfilePage.cpp  InfoNewLayer.cpp  InfoNewLayer.h  NewProfilePage.cpp  NewProfilePage.h  ParticleManager.hpp  SpotifyHandler.cpp
test/: CMakeLists.txt  about.md  mod.json
test/src/: main.cpp
